--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 -->
 
 <!doctype html>
-<html ng-app>
+<html data-ng-app="">
 	<head>
 		<script src="http://code.angularjs.org/1.2.3/angular.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
-			<div ng-controller="HelloCntl">
-				Your name: <input type="text" ng-model="name" />
-				Hello {{ name || "World"}}!
+			<div data-ng-controller="HelloCntl">
+				Your name: <input type="text" data-ng-model="name" />
+				Hello {{ name }}!
 			</div>
 	</body>
 </html>
